Removed a lot of unused code. Extend BaseIndexTest for most Index testing classes